package com.zsy.AbstractFactory;

/**
 * 抽象产品 - 按钮
 */
interface Button {
    void render();
    void onClick();
}
