package com.zsy.AbstractFactory;

/**
 * 抽象产品 - 复选框
 */
interface Checkbox {
    void render();
    void onCheck();
}

