package com.zsy.AbstractFactory;

/**
 * 抽象产品 - 文本框
 */
interface TextField {
    void render();
    void onInput();
}
